--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
+html {
+	margin: 100;
+	padding: 100;
+	}
+
 body {
-    background-color: #2e8b57;
+    background-color: #7ccc9e;
     font: 15px Garamound, serif;
+	margin: 1000; 
+	padding: 100;
 }
